--- a/index_dev.html
+++ b/index_dev.html
@@ -2,55 +2,67 @@
 
 <html>
     <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
    <link rel="stylesheet" href="main.css"
 
        <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+    <script src="app_code_dev.js"></script>
 
     </head>
 
     <body>
-   <!-- <div class="container pt-3">
-        <h1>SJU COURSE DIRECTORY</h1>
-        </div>
+    	<body style="display: block; text-align: center;">
 
-    -->
+
+    <img src="sju.jpg" />
+
+
+    <hr />
+    <h1>Course Syllabus</h1>
+   
+
+ 
 
     <form onsubmit="return false;" id="queryForm">
-        <!--Code Query-->
+        Course Code:
         <label for="codeQuery">Search by course code</label><br>
         <input type="text" id="codeQuery" name="codeQuery" value=""><br>
         <input id="queryByCode" type="button" onclick="updateView(this)" value="Query" data-querytype="by_course_code">
         <hr>
     </form>
 
-        <!--Title Query
+  		Course Title: 
         <label for="titleQuery">Search by course title</label><br>
         <input type="text" id="titleQuery" name="titleQuery" value=""><br>
         <input id="queryByTitle" type="button" onclick="updateView(this)" value="Query" data-querytype="by_title">
         <hr>
 
-        Instructor Query
+        Instructor: 
         <label for="instructorQuery">Search by course instructor</label><br>
         <input type="text" id="instructorQuery" name="instructorQuery" value=""><br>
         <input id="queryByInstructor" type="button" onclick="updateView(this)" value="Query" data-querytype="by_instructor">
         <hr>
 
-        <!--Level Query
+      Level:
         <label for="levelQuery">Search by course level</label><br>
         <input type="text" id="levelQuery" name="levelQuery" value=""><br>
         <input id="queryByLevel" type="button" onclick="updateView(this)" value="Query" data-querytype="by_level">
         <hr>
         
-        <!--Combined Query
+      Combined: 
         <label for="combinedQuery">Search by course instructor and level</label><br>
         <input type="text" id="nameQuery" name="nameQuery" value=""><br>
         <input type="text" id="levQuery" name="levQuery" value=""><br>
         <input id="queryCombined" type="button" onclick="updateView(this)" value="Query" data-querytype="combined_query">
         <hr>
    
-    </form> -->
+    </form> 
     <div id="results">
     </div>
     </body>
@@ -62,12 +74,12 @@
 
 
 <script id="show_results_view" type="text/x-handlebars-template">
-   
+   <table>
     <ul>
         {{#each courses}}
         <li> CODE: {{this.course_code}} | TITLE: {{this.title}} | INSTRUCTOR: {{this.instructor}} | LEVEL: {{this.course_level}}
         </li>
         {{/each}}
     </ul>
-
+</table>
 </script>
